a2a4j-core/src/main/java/io/github/PheonixHkbxoic/a2a4j/core/spec/error/TaskNotCancelableError.java
package io.github.PheonixHkbxoic.a2a4j.core.spec.error;

/**
 * @author PheonixHkbxoic
 */
public class TaskNotCancelableError extends JsonRpcError {
    public TaskNotCancelableError() {
        this.setCode(-32002);
        this.setMessage("Task cannot be canceled");
    }
}
